# Chatbot

./: LICENSE  README.md
chatbot/: Cargo.toml  README.md
chatbot/modules/main/: Cargo.toml
chatbot/modules/main/src/: lib.rs
chatbot/modules/marvin/: Cargo.toml
chatbot/modules/marvin/src/: lib.rs
chatbot/modules/steve/: Cargo.toml
chatbot/modules/steve/src/: lib.rs
chatbot/precompiled/linux/: iwasm  main.wasm  marvin.wasm  steve.wasm
wamr/module_management_system/: README.md
wamr/module_management_system/example/: main.c
wasmer/module_management_system/: Cargo.toml  README.md
wasmer/module_management_system/src/: main.rs
wasmtime/: README.md
wasmtime/module_management_system/: Cargo.toml  README.md
wasmtime/module_management_system/src/: exposed.rs  instance.rs  main.rs
wasmtime/module_management_system_python/: README.md  main.py  requirements.txt
