[package]
name = "wasmer_runtime"
version = "0.1.0"
authors = ["Victor Bankowski"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer-runtime = "0.15"
wasmer-runtime-core = "0.15"
wasmer-wasi = "0.15"
lazy_static = "1.4.0"

