[package]
name = "steve"
version = "0.1.0"
authors = ["Rochet2 <tqbattlenet@gmail.com>", "VoxWave <victor_bankowski@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
regex = "1"
rand = "0.7.3"
